--- a/nexus/nexus-nginx-secret.yaml
+++ b/nexus/nexus-nginx-secret.yaml
@@ -146,7 +146,7 @@ stringData:
 
     server {
 
-        listen 9999;
+        listen 80;
         server_name nexus.kube.local;
 
         #######################################################
@@ -267,7 +267,7 @@ stringData:
             # Managing Application
             #######################################################
 
-            proxy_pass http://nexus-service:6666/;
+            proxy_pass http://nexus-service:8081/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -276,15 +276,14 @@ stringData:
 
     # https://medium.com/@bjammal/install-nexus-repository-manager-behind-nginx-reverse-proxy-using-docker-18f745f207ee
     #
-    #    location /v2/ {
-    #
-    #        proxy_set_header Host $host;
-    #        proxy_set_header X-Real-IP $remote_addr;
-    #        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #        #proxy_set_header X-Forwarded-Proto "https";
-    #        proxy_pass http://nexus-service:7777;
-    #
-    #    }
+        location /v2/ {
 
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            #proxy_set_header X-Forwarded-Proto "https";
+            proxy_pass http://nexus-service:8082;
+
+        }
 
     }
