--- a/nexus/nexus-deployment.yaml
+++ b/nexus/nexus-deployment.yaml
@@ -22,6 +22,8 @@ spec:
           ports:
           - containerPort: 8081
             protocol: TCP
+          - containerPort: 8082
+            protocol: TCP
           resources:
             limits:
               cpu: 2000m
