--- a/nexus/nexus-deployment.yaml
+++ b/nexus/nexus-deployment.yaml
@@ -24,24 +24,21 @@ spec:
             protocol: TCP
           - containerPort: 8082
             protocol: TCP
+          - containerPort: 8083
+            protocol: TCP
           resources:
             limits:
               cpu: 2000m
               memory: 5Gi
             requests:
-              cpu: 50m
+              cpu: 10m
               memory: 2Gi
           volumeMounts:
             - name: nexus-storage
               mountPath: /nexus-data
 #              subPath: data
-            - name: nexus-storage-lh
-              mountPath: /lh-data
-#              subPath: data
       volumes:
         - name: nexus-storage
           persistentVolumeClaim:
             claimName: nexus-volume-claim
-        - name: nexus-storage-lh
-          persistentVolumeClaim:
-            claimName: nexus-volume-claim2
+            readonly: false
